add colors and app theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@use 'scss/theme-colors' as app-theme;
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+html {
+  @include mat.theme(
+    (
+      color: (
+        primary: app-theme.$primary-palette,
+        tertiary: app-theme.$tertiary-palette,
+      ),
+      typography: Montserrat,
+      density: 0,
+    )
+  );
+}
